# django-url-checks

./: .coveragerc  .flake8  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  pytest.ini  tox.ini
src/django_url_check/: __init__.py  checks.py  messages.py  messages_text.py
src/url_checks/: __init__.py  apps.py  checks.py  messages.py  messages_text.py
tests/: __init__.py  conftest.py  test_django_url_check.py  test_root_settings.py  test_urls.py  test_utilities.py
tests/fixtures/: invalid_conf.py  invalid_include.py  invalid_include_namespace.py  invalid_nested_path.py  invalid_path.py  invalid_re_include.py  invalid_re_include_namespace.py  invalid_re_path.py  valid_urls.py  views.py
